--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "NodeDeneme",
     "version": "1.0.0",
+    "main":"app.js",
     "scripts": {
         "start": "nodemon app.js"
     },
